@@ -36,7 +36,7 @@ $objs = %w{ rbclutter.o rbcltactor.o rbcltalpha.o rbcltbehaviour.o rbcltbehaviou
 + %w{ rbcltstagemanager.o }
 
 $objs += %w{ rbcogl.o rbcoglconsts.o rbcogltexture.o rbcoglprimitives.o } \
-+ %w{ rbcoglshader.o rbcoglprogram.o }
++ %w{ rbcoglshader.o rbcoglprogram.o rbcogloffscreen.o }
 
 # Add the boxed types to the object files list
 BOXED_TYPES.each { |bt| $objs << "rbclt#{bt}.o" }
